codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__open_interpreter_standalone_unix_update_available_history_cell_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
╭────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ ✨ Update available! 0.0.39 -> 9.9.9                                                                   │
│ Run sh -c 'curl -fsSL https://www.openinterpreter.com/install | CODEX_NON_INTERACTIVE=1 sh' to update. │
│                                                                                                        │
│ See full release notes:                                                                                │
│ https://github.com/openinterpreter/openinterpreter/releases/latest                                     │
╰────────────────────────────────────────────────────────────────────────────────────────────────────────╯
