codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__safety_access_block_event_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
ⓘ This content can't be shown
  We take extra caution with requests involving biological research and
  applications that could pose safety risks. Eligible researchers can apply
  for Trusted Access.
  Trusted Access: https://chatgpt.com/r/b749fb02595e04c3007a54375f3f4374
  Learn more: https://help.openai.com/en/articles/20001326
